Causeview Package Complete/ant script/retrieveUnpackaged/objects/Event_Level__c.object
<CustomObject>
    <description>Causeview - event ticket and sponsorship levels</description>
    <fields>
        <fullName>Attendees_per_Level__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of attendees per Level</description>
        <inlineHelpText>Define the number of attendees per Level - (Maximum 10)</inlineHelpText>
        <label>Attendees Per Level</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Event the ticket type is belongs to</description>
        <label>Event</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID - used for data integration or migration</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Description__c</fullName>
        <description>Description of event Level type</description>
        <label>Level Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Price of Level</description>
        <inlineHelpText>Set to $0.00 if a free or unpaid event</inlineHelpText>
        <label>Level Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_per_Order__c</fullName>
        <description>Maximum number of tickets permitted per order</description>
        <inlineHelpText>Optional: maximum number of tickets permitted per order</inlineHelpText>
        <label>Maximum per Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_per_Order__c</fullName>
        <description>Minimum tickets permitted per order</description>
        <inlineHelpText>Optional: minimum tickets permitted per order</inlineHelpText>
        <label>Minimum per Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Defines the order the Event Level will be displayed on the registration form.</description>
        <inlineHelpText>Defines the order the Event Level will be displayed on the registration form.  By default, the form will order by Event Level price.</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Available__c</fullName>
        <description>Quantity available for sale at this Level</description>
        <inlineHelpText>Quantity available for sale at this Level</inlineHelpText>
        <label>Quantity Available</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Remaining__c</fullName>
        <description>Quantity at Level remaining for sale</description>
        <formula>Quantity_Available__c -  Quantity_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity sold at this level</description>
        <label>Quantity Sold</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Ends__c</fullName>
        <description>Level sale end time</description>
        <inlineHelpText>Define an end date and time if you would like to restrict the sale, otherwise leave blank if there is no sale restriction.

Can be used for early bird pricing.</inlineHelpText>
        <label>Sale Ends</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sale_Starts__c</fullName>
        <description>Level sale start time</description>
        <inlineHelpText>Define a start date and time if you would like to restrict the sale, otherwise leave blank if there is no sale restriction.

Can be used for early bird pricing.</inlineHelpText>
        <label>Sale Starts</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of ticket type</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Sale</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>At The Door - On Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At The Door - Hidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket_Count__c</fullName>
        <formula>Quantity_Available__c *  Attendees_per_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tickets_Sold__c</fullName>
        <description>Total number of tickets sold</description>
        <formula>Attendees_per_Level__c * Quantity_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tickets Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Benefit_Amount__c</fullName>
        <description>Total benefit amount for event level</description>
        <inlineHelpText>Sum of benefit sponsorship amounts</inlineHelpText>
        <label>Total Benefit Amount</label>
        <summarizedField>Event_Level_Benefit__c.Total_Benefit_Value__c</summarizedField>
        <summaryForeignKey>Event_Level_Benefit__c.Event_Level__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Event Level</label>
    <nameField>
        <label>Event Level Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IA00000023QO3MAM_00NA0000009yIFkMAM</fullName>
        <active>true</active>
        <errorMessage>The event level does not belong to the event you have allocated to.</errorMessage>
        <field>Gift_Detail__c.Event_Level__c</field>
        <filterItems>
            <field>$Source.New_Campaign__c</field>
            <operation>equals</operation>
            <valueField>Event_Level__c.Event__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Allocation_Event Level</name>
        <sourceObject>Gift_Detail__c</sourceObject>
    </namedFilters>
    <pluralLabel>Event Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>attendees_per_level_validation</fullName>
        <active>true</active>
        <description>Attendees per level cannot be greater than 10</description>
        <errorConditionFormula>Attendees_per_Level__c &gt; 10</errorConditionFormula>
        <errorDisplayField>Attendees_per_Level__c</errorDisplayField>
        <errorMessage>Attendees per level cannot be greater than 10.</errorMessage>
    </validationRules>
</CustomObject>